Implement record support and remove checked exceptions