@@ -2,6 +2,7 @@ package gate.lang.contentDisposition;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -22,30 +23,27 @@ public class ContentDispositionParser implements AutoCloseable
 		Map<String, String> parameters = new LinkedHashMap<>();
 
 		Object current = scanner.scan();
-		if (!(current instanceof String))
+		if (!(current instanceof String string))
 			throw new ParseException("expected value and found " + current, 0);
-		String string = (String) current;
 
 		current = scanner.scan();
 		while (Character.valueOf(';').equals(current))
 		{
 			current = scanner.scan();
 
-			if (!(current instanceof String))
+			if (!(current instanceof String name))
 				throw new ParseException("expected parameter and found " + current, 0);
-			String name = (String) current;
 			current = scanner.scan();
 
 			if (!Character.valueOf('=').equals(current))
 				throw new ParseException("expected = and found " + current, 0);
 			current = scanner.scan();
 
-			if (!(current instanceof String))
+			if (!(current instanceof String value))
 				throw new ParseException("expected value and found " + current, 0);
-			String value = (String) current;
 			current = scanner.scan();
 
-			parameters.put(name, URLDecoder.decode(value, "UTF-8"));
+			parameters.put(name, URLDecoder.decode(value, StandardCharsets.UTF_8));
 		}
 
 		return new ContentDisposition(string, parameters);
