@@ -6,6 +6,7 @@ import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.Collections;
 import java.util.Map;
@@ -74,13 +75,7 @@ public class DataURL
 		parameters
 			.entrySet().forEach(e ->
 			{
-				try
-				{
-					string.append(';').append(e.getKey()).append('=').append(URLEncoder.encode(e.getValue(), "UTF-8"));
-				} catch (UnsupportedEncodingException ex)
-				{
-					throw new UncheckedIOException(ex);
-				}
+				string.append(';').append(e.getKey()).append('=').append(URLEncoder.encode(e.getValue(), StandardCharsets.UTF_8));
 			});
 
 		if (base64)
